--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /public/build
 /public/hot
+/public/storage
 /storage/*.key
 /vendor
 .env
@@ -16,4 +17,3 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-shayansolutions.zip
